--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
           </ul>
         </div>
       </section>
-      <section class="program">
+      <section class="program" id="program">
         <div class="container">
           <div class="title-box">
             <h2 class="title">Программа</h2>
