--- a/index.html
+++ b/index.html
@@ -1153,8 +1153,8 @@
     <footer class="footer">
       <div class="container">
         <div class="fop-box">
-          <p class="name">ФОП</p>
-          <p class="code">ІПН</p>
+          <p class="name">ФОП ЛОСЄВА АНАСТАСІЯ ВАЛЕРІЇВНА</p>
+          <p class="code">ІПН 3124325484</p>
         </div>
         <a class="mail-container" href="mailto:" rel="nofollow" target="_blank"
           ><img
@@ -1165,11 +1165,15 @@
           />почта</a
         >
         <div class="deals-box">
-          <a href="" target="_blank" rel="nofollow" class="deals-link public"
+          <a
+            href="https://docs.google.com/document/d/17jHWDOVM38miq3PYCTcMYsPENiAx-wax344ykIJxBrg/edit?usp=sharing"
+            target="_blank"
+            rel="nofollow"
+            class="deals-link public"
             >публичная оферта
           </a>
           <a
-            href=""
+            href="https://docs.google.com/document/d/1-aX-4sX8bN0cIFPdepCYw_hMXl7FJ5JyzveoA9DMZb0/edit?usp=sharing"
             target="_blank"
             rel="nofollow"
             class="deals-link confidence"
