--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <p class="item-text">Простая магия наших бабушек</p>
             </li>
           </ul>
-          <a class="btn-link-container" href="#program">
+          <a class="btn-link-container" href="#buy">
             <p class="btn-link">Подробнее</p>
             <div class="btn-star-container">
               <picture
@@ -234,7 +234,7 @@
               Для женщин и мужчин, которые хотят защитить себя и близких
             </li>
           </ul>
-          <a class="btn-link-container" href="#program">
+          <a class="btn-link-container" href="#buy">
             <p class="btn-link">ХОЧУ НА КУРС</p>
             <div class="btn-star-container">
               <picture
@@ -534,7 +534,9 @@
               </div>
             </li>
           </ul>
-          <p class="price"><span>4900 ГРН</span>&nbsp;&nbsp; 490 ГРН</p>
+          <p class="price mb-top" id="buy">
+            <span>4900 ГРН</span>&nbsp;&nbsp; 490 ГРН
+          </p>
           <button class="btn-link-container yellow" data-modal-open="modal1">
             <p class="btn-link">ПРИСОЕДИНИТЬСЯ</p>
             <div class="btn-star-container">
@@ -1204,7 +1206,7 @@
           />
         </button>
         <div class="modal-box">
-          <div></div>
+          <div id="kwiga-widget-100232"></div>
         </div>
       </div>
     </div>
@@ -1214,5 +1216,9 @@
     <script type="module" src="./src/js/swiper.js"></script>
     <script type="module" src="./src/js/questions.js"></script>
     <script type="module" src="./src/js/js-modal.js"></script>
+    <script
+      type="module"
+      src="https://kwiga.com/build/js/kwiga-widget.js?t=100232&uuid=197c30f1-3893-464a-a0aa-4c3bc47f7e52"
+    ></script>
   </body>
 </html>
