--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
             </li>
           </ul>
           <p class="price mb-top" id="buy">
-            <span>4900 ГРН</span>&nbsp;&nbsp; 490 ГРН
+            <span>4900 ГРН</span>&nbsp;&nbsp; 333 грн
           </p>
           <button class="btn-link-container yellow" data-modal-open="modal1">
             <p class="btn-link">ПРИСОЕДИНИТЬСЯ</p>
@@ -885,7 +885,7 @@
               </div>
             </li>
           </ul>
-          <p class="price"><span>4900 ГРН</span>&nbsp;&nbsp; 490 ГРН</p>
+          <p class="price"><span>4900 ГРН</span>&nbsp;&nbsp; 333 грн</p>
           <button class="btn-link-container" data-modal-open="modal1">
             <p class="btn-link">ХОЧУ НА КУРС</p>
             <div class="btn-star-container">
@@ -1061,7 +1061,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <p class="price"><span>4900 ГРН</span>&nbsp;&nbsp; 490 ГРН</p>
+          <p class="price"><span>4900 ГРН</span>&nbsp;&nbsp; 333 грн</p>
           <button class="btn-link-container yellow" data-modal-open="modal1">
             <p class="btn-link">ХОЧУ НА КУРС</p>
             <div class="btn-star-container">
