--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <h1 class="title">Сила деревенской магии:</h1>
           <h2 class="subtitle">3 обряда для диагностики, защиты и очищения</h2>
           <p class="desc">
-            За 7 дней ты продиагностируешь наличие негативных программ, порчи,
-            снимешь сглаз, научишься делать простые деревенские чистки и
-            привлечешь благополучие с помощью трёх простых деревенских практик
+            Снимите с себя "программу невезения", которая крадет ваши силы и
+            деньги. За 7 дней вы очиститесь от негатива и поставите защиту с
+            помощью 3-х проверенных деревенских ритуалов.
           </p>
           <ul class="list">
             <li class="list-item">
@@ -294,9 +294,10 @@
             <h2 class="title">Автор курса</h2>
             <h3 class="name">Меня зовут Стасана</h3>
             <p class="text">
-              я практик с более чем восьмилетним опытом в эзотерике. Более двух
-              лет я веду учеников как наставник, работаю со светлыми энергиями в
-              деревенской магии, Родом, Хрониками Акаши, Таро и Рунами
+              8 лет я собираю и практикую именно деревенские ритуалы — те, что
+              работали у наших бабушек. Я не использую сложные системы, моя сила
+              — в простоте: в огне свечи, силе соли и живой воде. Я знаю, что
+              эта древняя сила есть в каждом...
             </p>
           </div>
           <div class="list-wrapper">
@@ -439,7 +440,7 @@
                 <div class="item-number-box">
                   <p class="item-number">урок 2</p>
                   <p class="item-lesson-name">
-                    Ритуал с яйцом  — диагностика негатив «Глаз Яви»
+                    Ритуал с яйцом — диагностика негатив «Глаз Яви»
                   </p>
                 </div>
                 <img
@@ -563,7 +564,7 @@
             </li>
           </ul>
           <p class="price mb-top" id="buy">
-            <span>4750 ГРН</span>&nbsp;&nbsp; 333 грн
+            <span>7900 ГРН</span>&nbsp;&nbsp; 555 грн
           </p>
           <button class="btn-link-container yellow" data-modal-open="modal1">
             <p class="btn-link">ПРИСОЕДИНИТЬСЯ</p>
@@ -885,7 +886,7 @@
               </div>
             </li>
           </ul>
-          <p class="price"><span>4750 ГРН</span>&nbsp;&nbsp; 333 грн</p>
+          <p class="price"><span>7900 ГРН</span>&nbsp;&nbsp; 555 грн</p>
           <button class="btn-link-container" data-modal-open="modal1">
             <p class="btn-link">ХОЧУ НА КУРС</p>
             <div class="btn-star-container">
@@ -1061,7 +1062,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <p class="price"><span>4750 ГРН</span>&nbsp;&nbsp; 333 грн</p>
+          <p class="price"><span>7900 ГРН</span>&nbsp;&nbsp; 555 грн</p>
           <button class="btn-link-container yellow" data-modal-open="modal1">
             <p class="btn-link">ХОЧУ НА КУРС</p>
             <div class="btn-star-container">
