--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             </li>
           </ul>
           <p class="price mb-top" id="buy">
-            <span>7900 ГРН</span>&nbsp;&nbsp; 555 грн
+            <span>2850 ГРН</span>&nbsp;&nbsp; 199 ГРН
           </p>
           <button class="btn-link-container yellow" data-modal-open="modal1">
             <p class="btn-link">ПРИСОЕДИНИТЬСЯ</p>
@@ -886,7 +886,7 @@
               </div>
             </li>
           </ul>
-          <p class="price"><span>7900 ГРН</span>&nbsp;&nbsp; 555 грн</p>
+          <p class="price"><span>2850 ГРН</span>&nbsp;&nbsp; 199 ГРН</p>
           <button class="btn-link-container" data-modal-open="modal1">
             <p class="btn-link">ХОЧУ НА КУРС</p>
             <div class="btn-star-container">
@@ -1062,7 +1062,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-          <p class="price"><span>7900 ГРН</span>&nbsp;&nbsp; 555 грн</p>
+          <p class="price"><span>2850 ГРН</span>&nbsp;&nbsp; 199 ГРН</p>
           <button class="btn-link-container yellow" data-modal-open="modal1">
             <p class="btn-link">ХОЧУ НА КУРС</p>
             <div class="btn-star-container">
